--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,12 @@
     "@types/react-dom": "^18.3.0",
     "date-fns": "^3.6.0",
     "http-proxy-middleware": "^3.0.0",
+    "javascript-time-ago": "^2.5.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-time-ago": "^7.3.3",
+    "timeago-react": "^3.0.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
