--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "adanjz <adanzweig@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
