--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-time-ago": "^7.3.3",
+    "rrule": "^2.8.1",
     "timeago-react": "^3.0.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
