--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,12 @@
   "name": "google-calendar",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node dist/index.js",
+    "dev": "nodemon --exec ts-node index.ts",
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "adanjz <adanzweig@gmail.com>",
@@ -18,6 +20,11 @@
     "googleapis": "^131.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.11",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
