--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,9 @@
   "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +14,8 @@
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "http-proxy-middleware": "^3.0.0",
     "javascript-time-ago": "^2.5.10",
@@ -19,6 +24,8 @@
     "react-scripts": "5.0.1",
     "react-time-ago": "^7.3.3",
     "rrule": "^2.8.1",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
