--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-CLIENT_ID="347267652222-hl8lu079t7lgs1eh4t5lovapuibcv3kq.apps.googleusercontent.com"
-CLIENT_SECRET="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"
+CLIENT_ID="YOUR_CLIENT_ID_HERE"
+CLIENT_SECRET="YOUR_CLIENT_SECRET_HERE"
 REDIRECT_URI=http://localhost:5000/api/redirect
 CLIENT_URL=http://localhost:3000
 
